Fix imaga too wide on mobile.

--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ footer {
         margin: 10px 0 0 0;
     }
     .card .content img {   
-        width: 100%;
+        width: 99%;
     }
 }
 
